--- a/research/clf_model1.ipynb
+++ b/research/clf_model1.ipynb
@@ -270,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Class Distribution Per Branch (Before Sampling)**"
+    "#### **Class Distribution Per Branch (After Sampling)**"
    ]
   },
   {
